--- a/index.html
+++ b/index.html
@@ -2046,7 +2046,7 @@
                         </div>
                         <div class="education-content">
                             <span class="education-year">2024 - 2028</span>
-                            <h3 class="education-title">BS in Computer Science</h3>
+                            <h3 class="education-title">BS - CS</h3>
                             <div class="education-details">
                                 <div class="education-institution">Punjab University, Lahore</div>
                                 <div class="education-marks">CGPA: 3.58/4.0</div>
@@ -2064,7 +2064,7 @@
                         </div>
                         <div class="education-content">
                             <span class="education-year">2022 - 2024</span>
-                            <h3 class="education-title">FSc - Pre Engineering</h3>
+                            <h3 class="education-title">FSc - Pre Eng.</h3>
                             <div class="education-details">
                                 <div class="education-institution">Punjab College, Zafarwal</div>
                                 <div class="education-marks">Marks: 85.01%</div>
