--- a/index.html
+++ b/index.html
@@ -1769,7 +1769,7 @@
                 <div class="hero-btns">
                     <a href="#portfolio" class="btn"><i class="fas fa-eye"></i>View My Work</a>
                     <a href="#contact" class="btn btn-secondary"><i class="fas fa-paper-plane"></i>Hire Me</a>
-                   <a href="resume.pdf" class="btn-download" download>
+                   <a href="myresume.pdf" class="btn-download" download>
                 <i class="fas fa-download"></i>Get My Resume
                 </a>
                 </div>
@@ -2442,3 +2442,4 @@
     </script>
 </body>
 </html>
+
