--- a/index.html
+++ b/index.html
@@ -2141,22 +2141,22 @@
                         <a href="https://github.com/Shoaib-123Pulhr" class="social-link"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
-                <div class="contact-form">
-                    <form id="contactForm">
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" placeholder="Your Name" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder="Your Email" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" id="subject" name="subject" placeholder="Subject" required>
-                        </div>
-                        <div class="form-group">
-                            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="btn"><i class="fas fa-paper-plane"></i>Send Message</button>
-                    </form>
+               <form id="contactForm">
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="name" required><br><br>
+
+  <label for="email">Email:</label><br>
+  <input type="email" id="email" name="email" required><br><br>
+
+  <label for="subject">Subject:</label><br>
+  <input type="text" id="subject" name="subject" required><br><br>
+
+  <label for="message">Message:</label><br>
+  <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+  <button type="submit">Send Message</button>
+</form>
+
                 </div>
             </div>
         </div>
@@ -2453,6 +2453,7 @@ contactForm.addEventListener('submit', (e) => {
     </script>
 </body>
 </html>
+
 
 
 
