--- a/index.html
+++ b/index.html
@@ -2332,9 +2332,7 @@
         }, observerOptions);
 
         document.querySelectorAll('.section').forEach(section => observer.observe(section));
-
-<script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-<script>
+            //inityializ jsemail
   (function() {
     emailjs.init("_cyEIXdzWrVe6DBTy"); // replace with your EmailJS Public Key
   })();
@@ -2375,9 +2373,6 @@
         submitBtn.disabled = false;
       });
   });
-</script>
-
-
         // Page load animations
         document.addEventListener('DOMContentLoaded', () => {
             setTimeout(() => {
@@ -2453,6 +2448,7 @@
     </script>
 </body>
 </html>
+
 
 
 
