--- a/index.html
+++ b/index.html
@@ -2140,24 +2140,26 @@
                         <a href="https://x.com/SHOAIBIMRAN231?t=WmCTBDndRQgy7KpI8sdiRw&s=08" class="social-link"><i class="fab fa-twitter"></i></a>
                         <a href="https://github.com/Shoaib-123Pulhr" class="social-link"><i class="fab fa-github"></i></a>
                     </div>
-                </div>
-               <form id="contactForm">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name" required><br><br>
+         <div class="contact-form">
+    <form id="contactForm">
+      <div class="form-group">
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
+      </div>
+      <div class="form-group">
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
+      </div>
+      <div class="form-group">
+        <input type="text" id="subject" name="subject" placeholder="Subject" required>
+      </div>
+      <div class="form-group">
+        <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+      </div>
+      <button type="submit" class="btn">
+        <i class="fas fa-paper-plane"></i> Send Message
+      </button>
+    </form>
+  </div>
 
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br><br>
-
-  <label for="subject">Subject:</label><br>
-  <input type="text" id="subject" name="subject" required><br><br>
-
-  <label for="message">Message:</label><br>
-  <textarea id="message" name="message" rows="5" required></textarea><br><br>
-
-  <button type="submit">Send Message</button>
-</form>
-
-                </div>
             </div>
         </div>
     </section>
@@ -2332,47 +2334,58 @@
         }, observerOptions);
 
         document.querySelectorAll('.section').forEach(section => observer.observe(section));
-            //inityializ jsemail
-  (function() {
-    emailjs.init("_cyEIXdzWrVe6DBTy"); // replace with your EmailJS Public Key
-  })();
-
-  const contactForm = document.getElementById('contactForm');
-  const notification = document.getElementById('notification');
-  const notificationText = document.querySelector('.notification-text');
-
-  function showNotification(message, isSuccess = true) {
-    notificationText.textContent = message;
-    notification.className = `notification ${isSuccess ? 'success' : 'error'} show`;
-    setTimeout(() => notification.classList.remove('show'), 5000);
-  }
-
-  contactForm.addEventListener('submit', (e) => {
-    e.preventDefault(); // ✅ Stops form from refreshing
-
-    const formData = new FormData(contactForm);
-    const data = Object.fromEntries(formData.entries());
-
-    const submitBtn = contactForm.querySelector('button[type="submit"]');
-    const originalBtnText = submitBtn.innerHTML;
-
-    submitBtn.innerHTML = 'Sending...';
-    submitBtn.disabled = true;
-
-    emailjs.send("service_e0wb3sg", "template_yp59ctl", data)
-      .then(() => {
-        showNotification('✅ Message sent successfully! I will get back to you soon.', true);
-        contactForm.reset();
-      })
-      .catch((error) => {
-        console.error("EmailJS Error:", error);
-        showNotification('❌ Failed to send message. Please try again later.', false);
-      })
-      .finally(() => {
-        submitBtn.innerHTML = originalBtnText;
-        submitBtn.disabled = false;
-      });
+         // ✅ Initialize EmailJS
+(function () {
+  emailjs.init({
+    publicKey: "_cyEIXdzWrVe6DBTy" // replace with your EmailJS Public Key
   });
+})();
+
+const contactForm = document.getElementById("contactForm");
+const notification = document.getElementById("notification");
+const notificationText = document.querySelector(".notification-text");
+
+// ✅ Function to show success/error notification
+function showNotification(message, isSuccess = true) {
+  if (!notification || !notificationText) return;
+
+  notificationText.textContent = message;
+  notification.className = `notification ${isSuccess ? "success" : "error"} show`;
+
+  setTimeout(() => {
+    notification.classList.remove("show");
+  }, 5000);
+}
+
+// ✅ Handle form submission
+contactForm.addEventListener("submit", (e) => {
+  e.preventDefault(); // Prevents page reload
+
+  const formData = new FormData(contactForm);
+  const data = Object.fromEntries(formData.entries());
+
+  const submitBtn = contactForm.querySelector('button[type="submit"]');
+  const originalBtnText = submitBtn.innerHTML;
+
+  submitBtn.innerHTML = "Sending...";
+  submitBtn.disabled = true;
+
+  // Replace with your EmailJS service & template IDs
+  emailjs.send("service_e0wb3sg", "template_yp59ctl", data)
+    .then(() => {
+      showNotification("✅ Message sent successfully! I will get back to you soon.", true);
+      contactForm.reset();
+    })
+    .catch((error) => {
+      console.error("EmailJS Error:", error);
+      showNotification("❌ Failed to send message. Please try again later.", false);
+    })
+    .finally(() => {
+      submitBtn.innerHTML = originalBtnText;
+      submitBtn.disabled = false;
+    });
+});
+
         // Page load animations
         document.addEventListener('DOMContentLoaded', () => {
             setTimeout(() => {
@@ -2448,6 +2461,7 @@
     </script>
 </body>
 </html>
+
 
 
 
