--- a/index.html
+++ b/index.html
@@ -2188,7 +2188,7 @@
         <i class="fas fa-check-circle"></i>
         <span class="notification-text"></span>
     </div>
-    
+     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         // Mobile Menu Toggle
         const menuToggle = document.querySelector('.menu-toggle');
@@ -2463,6 +2463,7 @@ contactForm.addEventListener("submit", (e) => {
     </script>
 </body>
 </html>
+
 
 
 
