--- a/index.html
+++ b/index.html
@@ -2186,7 +2186,8 @@
         <i class="fas fa-check-circle"></i>
         <span class="notification-text"></span>
     </div>
-     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
     <script>
         // Mobile Menu Toggle
         const menuToggle = document.querySelector('.menu-toggle');
@@ -2462,6 +2463,7 @@
     </script>
 </body>
 </html>
+
 
 
 
