--- a/index.html
+++ b/index.html
@@ -2340,7 +2340,7 @@
              // ✅ Initialize EmailJS
   (function () {
     emailjs.init({
-      publicKey: "_cyEIXdzWrVe6DBTy" // Replace with your EmailJS Public Key
+      publicKey: "9FI64TNuhWqa0h7hg" // Replace with your EmailJS Public Key
     });
   })();
 
@@ -2464,6 +2464,7 @@
     </script>
 </body>
 </html>
+
 
 
 
