--- a/index.html
+++ b/index.html
@@ -2338,9 +2338,9 @@
       
 });
              // ✅ Initialize EmailJS
-// Correct way for CDN/email.min.js
-emailjs.init("ty04Y-cNdjh7AH8HN");
-
+   (function() {
+            emailjs.init("ty04Y-cNdjh7AH8HN"); // Replace with your actual EmailJS public key
+        })();
 
   const contactForm = document.getElementById("contactForm");
   const notification = document.getElementById("notification");
@@ -2462,6 +2462,7 @@ emailjs.init("ty04Y-cNdjh7AH8HN");
     </script>
 </body>
 </html>
+
 
 
 
