--- a/index.html
+++ b/index.html
@@ -2339,7 +2339,7 @@
 });
              // ✅ Initialize EmailJS
    (function() {
-            emailjs.init("_8mm4anq"); // Replace with your actual EmailJS public key
+            emailjs.init("_puyX3tOM6aoiAyeE"); // Replace with your actual EmailJS public key
         })();
 
   const contactForm = document.getElementById("contactForm");
@@ -2462,6 +2462,7 @@
     </script>
 </body>
 </html>
+
 
 
 
